debezium/dbz#1668 Enable component descriptor generation for Http sink
Signed-off-by: Fiore Mario Vitale <mvitale@redhat.com>