@@ -12,16 +12,15 @@ import java.net.http.HttpClient;
 import java.net.http.HttpRequest;
 import java.net.http.HttpResponse;
 import java.nio.charset.StandardCharsets;
-import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Base64;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
-import java.util.Optional;
 import java.util.UUID;
 
 import jakarta.annotation.PostConstruct;
+import jakarta.annotation.PreDestroy;
 import jakarta.enterprise.context.Dependent;
 import jakarta.inject.Named;
 
@@ -31,10 +30,15 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import io.debezium.DebeziumException;
+import io.debezium.Module;
 import io.debezium.annotation.VisibleForTesting;
+import io.debezium.config.Field;
 import io.debezium.engine.ChangeEvent;
 import io.debezium.engine.DebeziumEngine;
+import io.debezium.metadata.ComponentMetadata;
+import io.debezium.metadata.ComponentMetadataFactory;
 import io.debezium.server.BaseChangeConsumer;
+import io.debezium.server.DebeziumServerSink;
 import io.debezium.server.http.jwt.JWTAuthenticatorBuilder;
 import io.debezium.server.http.oauth2.OAuth2AuthenticatorBuilder;
 import io.debezium.server.http.webhooks.StandardWebhooksAuthenticatorBuilder;
@@ -48,40 +52,14 @@ import io.debezium.util.Metronome;
  */
 @Named("http")
 @Dependent
-public class HttpChangeConsumer extends BaseChangeConsumer implements DebeziumEngine.ChangeConsumer<ChangeEvent<Object, Object>> {
+public class HttpChangeConsumer extends BaseChangeConsumer implements DebeziumEngine.ChangeConsumer<ChangeEvent<Object, Object>>, DebeziumServerSink {
     private static final Logger LOGGER = LoggerFactory.getLogger(HttpChangeConsumer.class);
 
-    public static final String PROP_PREFIX = "debezium.sink.http.";
-    public static final String PROP_WEBHOOK_URL = "url";
-    public static final String PROP_CLIENT_TIMEOUT = "timeout.ms";
-    public static final String PROP_RETRIES = "retries";
-    public static final String PROP_RETRY_INTERVAL = "retry.interval.ms";
-    public static final String PROP_HEADERS_ENCODE_BASE64 = "headers.encode.base64";
-    public static final String PROP_HEADERS_PREFIX = "headers.prefix";
+    private final ComponentMetadataFactory componentMetadataFactory = new ComponentMetadataFactory();
 
-    public static final String PROP_AUTHENTICATION_PREFIX = PROP_PREFIX + "authentication.";
-    public static final String PROP_AUTHENTICATION_TYPE = "type";
-    public static final String PROP_BATCH_ENABLED = "batch.enabled";
-    public static final String PROP_BATCH_MAX_SIZE = "batch.max-size";
+    private static final String PROP_PREFIX = "debezium.sink.http.";
 
-    public static final String JWT_AUTHENTICATION = "jwt";
-    public static final String STANDARD_WEBHOOKS_AUTHENTICATION = "standard-webhooks";
-    public static final String OAUTH2_AUTHENTICATION = "oauth2";
-
-    private static final long HTTP_TIMEOUT = 60_000L; // Default to 60s
-    private static final int DEFAULT_RETRIES = 5;
-    private static final long RETRY_INTERVAL = 1_000L; // Default to 1s
-    private static final String DEFAULT_HEADERS_PREFIX = "X-DEBEZIUM-";
-    private static final int DEFAULT_BATCH_MAX_SIZE = 200;
-
-    private static Duration timeoutDuration;
-    private static int retries;
-    private static Duration retryInterval;
-    private boolean base64EncodeHeaders = true;
-    private String headersPrefix = DEFAULT_HEADERS_PREFIX;
-    private boolean batchEnabled = false;
-    private int batchMaxSize = DEFAULT_BATCH_MAX_SIZE;
-
+    private HttpChangeConsumerConfig config;
     private HttpClient client;
     private HttpRequest.Builder baseRequestBuilder;
 
@@ -96,46 +74,34 @@ public class HttpChangeConsumer extends BaseChangeConsumer implements DebeziumEn
         initWithConfig(config);
     }
 
+    @PreDestroy
+    @Override
+    public void close() {
+        LOGGER.info("Closing HTTP sink");
+
+        client.close();
+    }
+
     @VisibleForTesting
-    void initWithConfig(Config config) throws URISyntaxException {
+    void initWithConfig(Config mpConfig) throws URISyntaxException {
         String sinkUrl;
         String contentType;
 
+        // Convert MicroProfile Config to Debezium Configuration
+        io.debezium.config.Configuration configuration = io.debezium.config.Configuration.from(getConfigSubset(mpConfig, PROP_PREFIX));
+        this.config = new HttpChangeConsumerConfig(configuration);
+
         client = createHttpClient();
         String sink = System.getenv("K_SINK");
-        timeoutDuration = Duration.ofMillis(HTTP_TIMEOUT);
-        retries = DEFAULT_RETRIES;
-        retryInterval = Duration.ofMillis(RETRY_INTERVAL);
 
         if (sink != null) {
             sinkUrl = sink;
         }
         else {
-            sinkUrl = config.getValue(PROP_PREFIX + PROP_WEBHOOK_URL, String.class);
+            sinkUrl = this.config.getUrl();
         }
 
-        config.getOptionalValue(PROP_PREFIX + PROP_CLIENT_TIMEOUT, String.class)
-                .ifPresent(t -> timeoutDuration = Duration.ofMillis(Long.parseLong(t)));
-
-        config.getOptionalValue(PROP_PREFIX + PROP_RETRIES, String.class)
-                .ifPresent(n -> retries = Integer.parseInt(n));
-
-        config.getOptionalValue(PROP_PREFIX + PROP_RETRY_INTERVAL, String.class)
-                .ifPresent(t -> retryInterval = Duration.ofMillis(Long.parseLong(t)));
-
-        config.getOptionalValue(PROP_PREFIX + PROP_HEADERS_PREFIX, String.class)
-                .ifPresent(p -> headersPrefix = p);
-
-        config.getOptionalValue(PROP_PREFIX + PROP_HEADERS_ENCODE_BASE64, Boolean.class)
-                .ifPresent(b -> base64EncodeHeaders = b);
-
-        config.getOptionalValue(PROP_PREFIX + PROP_BATCH_ENABLED, Boolean.class)
-                .ifPresent(b -> batchEnabled = b);
-
-        config.getOptionalValue(PROP_PREFIX + PROP_BATCH_MAX_SIZE, Integer.class)
-                .ifPresent(n -> batchMaxSize = n);
-
-        contentType = switch (config.getValue("debezium.format.value", String.class).toLowerCase()) {
+        contentType = switch (mpConfig.getValue("debezium.format.value", String.class).toLowerCase()) {
             case "avro" -> "avro/bytes";
             case "cloudevents" -> "application/cloudevents+json";
             case "json" -> "application/json";
@@ -143,21 +109,21 @@ public class HttpChangeConsumer extends BaseChangeConsumer implements DebeziumEn
             default -> "application/json";
         };
 
-        authenticator = buildAuthenticator(config);
+        authenticator = buildAuthenticator(configuration);
 
         LOGGER.info("Using http content-type type {}", contentType);
         LOGGER.info("Using sink URL: {}", sinkUrl);
-        LOGGER.info("Batch mode: {}", batchEnabled ? "enabled (max-size=" + batchMaxSize + ")" : "disabled");
+        LOGGER.info("Batch mode: {}", config.isBatchEnabled() ? "enabled (max-size=" + config.getBatchMaxSize() + ")" : "disabled");
         baseRequestBuilder = HttpRequest
                 .newBuilder(new URI(sinkUrl))
-                .timeout(timeoutDuration)
+                .timeout(this.config.getTimeoutDuration())
                 .setHeader("content-type", contentType);
     }
 
     @Override
     public void handleBatch(List<ChangeEvent<Object, Object>> records, DebeziumEngine.RecordCommitter<ChangeEvent<Object, Object>> committer)
             throws InterruptedException {
-        if (batchEnabled) {
+        if (config.isBatchEnabled()) {
             handleBatchAggregated(records, committer);
         }
         else {
@@ -177,10 +143,10 @@ public class HttpChangeConsumer extends BaseChangeConsumer implements DebeziumEn
                 int attempts = 0;
                 while (!recordSent(record, messageId)) {
                     attempts++;
-                    if (attempts >= retries) {
+                    if (attempts >= config.getRetries()) {
                         throw new DebeziumException("Exceeded maximum number of attempts to publish event " + record);
                     }
-                    Metronome.sleeper(retryInterval, Clock.SYSTEM).pause();
+                    Metronome.sleeper(config.getRetryInterval(), Clock.SYSTEM).pause();
                 }
                 committer.markProcessed(record);
             }
@@ -205,8 +171,8 @@ public class HttpChangeConsumer extends BaseChangeConsumer implements DebeziumEn
         }
 
         // Chunk records into sub-batches of at most batchMaxSize
-        for (int from = 0; from < nonNullRecords.size(); from += batchMaxSize) {
-            int to = Math.min(from + batchMaxSize, nonNullRecords.size());
+        for (int from = 0; from < nonNullRecords.size(); from += config.getBatchMaxSize()) {
+            int to = Math.min(from + config.getBatchMaxSize(), nonNullRecords.size());
             List<ChangeEvent<Object, Object>> chunk = nonNullRecords.subList(from, to);
 
             List<String> values = new ArrayList<>(chunk.size());
@@ -217,15 +183,15 @@ public class HttpChangeConsumer extends BaseChangeConsumer implements DebeziumEn
             // Values are assumed to be pre-serialized JSON from the Debezium format serializer
             String batchPayload = "[" + String.join(",", values) + "]";
 
-            Map<String, String> chunkHeaders = convertHeaders(chunk.getFirst());
+            Map<String, String> chunkHeaders = convertHeaders(chunk.get(0));
             UUID messageId = UUID.randomUUID();
             int attempts = 0;
             while (!batchSent(batchPayload, messageId, chunkHeaders)) {
                 attempts++;
-                if (attempts >= retries) {
+                if (attempts >= config.getRetries()) {
                     throw new DebeziumException("Exceeded maximum number of attempts to publish batch of " + chunk.size() + " events");
                 }
-                Metronome.sleeper(retryInterval, Clock.SYSTEM).pause();
+                Metronome.sleeper(config.getRetryInterval(), Clock.SYSTEM).pause();
             }
 
             // Mark records processed immediately after their chunk is successfully sent
@@ -243,10 +209,10 @@ public class HttpChangeConsumer extends BaseChangeConsumer implements DebeziumEn
 
         for (Map.Entry<String, String> entry : headers.entrySet()) {
             String headerValue = entry.getValue();
-            if (base64EncodeHeaders) {
+            if (config.isHeadersEncodeBase64()) {
                 headerValue = Base64.getEncoder().encodeToString(headerValue.getBytes(StandardCharsets.UTF_8));
             }
-            requestBuilder.header(headersPrefix + entry.getKey().toUpperCase(Locale.ROOT), headerValue);
+            requestBuilder.header(config.getHeadersPrefix() + entry.getKey().toUpperCase(Locale.ROOT), headerValue);
         }
 
         if (authenticator != null) {
@@ -272,23 +238,71 @@ public class HttpChangeConsumer extends BaseChangeConsumer implements DebeziumEn
         }
     }
 
-    private Authenticator buildAuthenticator(Config config) {
-        Optional<String> authenticationType = config.getOptionalValue(PROP_AUTHENTICATION_PREFIX + PROP_AUTHENTICATION_TYPE, String.class);
+    private Authenticator buildAuthenticator(io.debezium.config.Configuration configuration) {
+        String authenticationType = config.getAuthenticationType();
 
-        return authenticationType.map(s -> switch (s.toLowerCase()) {
-            case JWT_AUTHENTICATION -> JWTAuthenticatorBuilder.fromConfig(config, PROP_AUTHENTICATION_PREFIX)
-                    .setHttpClient(client)
-                    .build();
-            case OAUTH2_AUTHENTICATION -> OAuth2AuthenticatorBuilder.fromConfig(config, PROP_AUTHENTICATION_PREFIX)
-                    .setHttpClient(client)
-                    .build();
-            case STANDARD_WEBHOOKS_AUTHENTICATION ->
-                StandardWebhooksAuthenticatorBuilder.fromConfig(config, PROP_AUTHENTICATION_PREFIX)
-                        .build();
+        if (authenticationType == null) {
+            return null;
+        }
+
+        return switch (authenticationType.toLowerCase()) {
+            case HttpChangeConsumerConfig.JWT_AUTHENTICATION -> buildJwtAuthenticator();
+            case HttpChangeConsumerConfig.OAUTH2_AUTHENTICATION -> buildOauth2Authenticator();
+            case HttpChangeConsumerConfig.STANDARD_WEBHOOKS_AUTHENTICATION -> buildStandardWebhooksAuthenticator();
             default -> throw new DebeziumException(
-                    "Unknown value '" + s + "' encountered for property " + PROP_AUTHENTICATION_PREFIX + PROP_AUTHENTICATION_TYPE);
-        }).orElse(null);
+                    "Unknown value '" + authenticationType + "' encountered for property " + PROP_PREFIX + "authentication.type");
+        };
+    }
 
+    private Authenticator buildJwtAuthenticator() {
+        try {
+            JWTAuthenticatorBuilder builder = new JWTAuthenticatorBuilder()
+                    .setUsername(config.getJwtUsername())
+                    .setPassword(config.getJwtPassword())
+                    .setAuthUri(new java.net.URI(config.getJwtUrl() + "auth/authenticate"))
+                    .setHttpClient(client);
+
+            // setRefreshUri returns void, so call it separately
+            builder.setRefreshUri(new java.net.URI(config.getJwtUrl() + "auth/refreshToken"));
+
+            // Set token expirations if provided (with defaults)
+            if (config.getJwtTokenExpiration() != null) {
+                builder.setTokenExpirationDuration(config.getJwtTokenExpiration());
+            }
+            if (config.getJwtRefreshTokenExpiration() != null) {
+                builder.setRefreshTokenExpirationDuration(config.getJwtRefreshTokenExpiration());
+            }
+
+            return builder.build();
+        }
+        catch (java.net.URISyntaxException e) {
+            throw new DebeziumException("Could not parse JWT authentication URL: " + config.getJwtUrl(), e);
+        }
+    }
+
+    private Authenticator buildOauth2Authenticator() {
+        try {
+            OAuth2AuthenticatorBuilder builder = new OAuth2AuthenticatorBuilder()
+                    .setClientId(config.getOauth2ClientId())
+                    .setClientSecret(config.getOauth2ClientSecret())
+                    .setTokenUri(new java.net.URI(config.getOauth2TokenUrl()))
+                    .setHttpClient(client);
+
+            if (config.getOauth2Scope() != null) {
+                builder.setScope(config.getOauth2Scope());
+            }
+
+            return builder.build();
+        }
+        catch (java.net.URISyntaxException e) {
+            throw new DebeziumException("Could not parse OAuth2 token URL: " + config.getOauth2TokenUrl(), e);
+        }
+    }
+
+    private Authenticator buildStandardWebhooksAuthenticator() {
+        return new StandardWebhooksAuthenticatorBuilder()
+                .setSecret(config.getWebhookSecret())
+                .build();
     }
 
     private boolean recordSent(ChangeEvent<Object, Object> record, UUID messageId) throws InterruptedException {
@@ -328,10 +342,10 @@ public class HttpChangeConsumer extends BaseChangeConsumer implements DebeziumEn
 
         for (Map.Entry<String, String> entry : headers.entrySet()) {
             String headerValue = entry.getValue();
-            if (base64EncodeHeaders) {
+            if (config.isHeadersEncodeBase64()) {
                 headerValue = Base64.getEncoder().encodeToString(headerValue.getBytes(StandardCharsets.UTF_8));
             }
-            builder.header(headersPrefix + entry.getKey().toUpperCase(Locale.ROOT), headerValue);
+            builder.header(config.getHeadersPrefix() + entry.getKey().toUpperCase(Locale.ROOT), headerValue);
         }
 
         return builder;
@@ -340,5 +354,34 @@ public class HttpChangeConsumer extends BaseChangeConsumer implements DebeziumEn
     @VisibleForTesting
     HttpClient createHttpClient() {
         return HttpClient.newHttpClient();
+    }
+
+    @Override
+    public Field.Set getConfigFields() {
+        return Field.setOf(
+                HttpChangeConsumerConfig.URL,
+                HttpChangeConsumerConfig.TIMEOUT_MS,
+                HttpChangeConsumerConfig.RETRIES,
+                HttpChangeConsumerConfig.RETRY_INTERVAL_MS,
+                HttpChangeConsumerConfig.HEADERS_ENCODE_BASE64,
+                HttpChangeConsumerConfig.HEADERS_PREFIX,
+                HttpChangeConsumerConfig.BATCH_ENABLED,
+                HttpChangeConsumerConfig.BATCH_MAX_SIZE,
+                HttpChangeConsumerConfig.AUTHENTICATION_TYPE,
+                HttpChangeConsumerConfig.JWT_USERNAME,
+                HttpChangeConsumerConfig.JWT_PASSWORD,
+                HttpChangeConsumerConfig.JWT_URL,
+                HttpChangeConsumerConfig.JWT_TOKEN_EXPIRATION,
+                HttpChangeConsumerConfig.JWT_REFRESH_TOKEN_EXPIRATION,
+                HttpChangeConsumerConfig.OAUTH2_CLIENT_ID,
+                HttpChangeConsumerConfig.OAUTH2_CLIENT_SECRET,
+                HttpChangeConsumerConfig.OAUTH2_TOKEN_URL,
+                HttpChangeConsumerConfig.OAUTH2_SCOPE,
+                HttpChangeConsumerConfig.WEBHOOK_SECRET);
+    }
+
+    @Override
+    public List<ComponentMetadata> getConnectorMetadata() {
+        return List.of(componentMetadataFactory.createComponentMetadata(this, Module.version()));
     }
 }
